<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        style="@style/Widget.MaterialComponents.AppBarLayout.Surface"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="Criar campeonato"
            app:titleTextColor="@color/white" />

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="none"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_camp_name"
                style="@style/TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                app:hintEnabled="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_camp_name"
                    style="@style/EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nome_do_campeonato"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_descricao"
                style="@style/TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                app:hintEnabled="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/input_camp_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_descricao"
                    style="@style/EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/descricao" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/text_tipo"
                style="@style/TextAppearance.Headline6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:text="@string/tipo"
                android:textColor="@color/textColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/input_descricao" />

            <RadioGroup
                android:id="@+id/radio_group_tipo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_tipo">

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/campeonato"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="16dp"
                    android:text="@string/campeonato"
                    android:textAppearance="@style/TextAppearance.Subtitle1"
                    android:textColor="@color/textColor"
                    tools:ignore="RtlSymmetry" />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/matamata"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="16dp"
                    android:text="@string/mata_mata"
                    android:textAppearance="@style/TextAppearance.Subtitle1"
                    android:textColor="@color/textColor"
                    tools:ignore="RtlSymmetry" />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/torneio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="16dp"
                    android:text="@string/torneio"
                    android:textAppearance="@style/TextAppearance.Subtitle1"
                    android:textColor="@color/textColor"
                    tools:ignore="RtlSymmetry" />

            </RadioGroup>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/text_participantes"
                style="@style/TextAppearance.Headline6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:text="@string/participantes"
                android:textColor="@color/textColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/radio_group_tipo" />

            <RadioGroup
                android:id="@+id/radio_group_participantes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                app:layout_constraintBottom_toTopOf="@+id/btn_continuar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_participantes"
                app:layout_constraintVertical_bias="0">

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/oito"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="16dp"
                    android:text="@string/_8_participantes"
                    android:textAppearance="@style/TextAppearance.Subtitle1"
                    android:textColor="@color/textColor"
                    tools:ignore="RtlSymmetry" />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/dezesseis"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="16dp"
                    android:text="@string/_16_participantes"
                    android:textAppearance="@style/TextAppearance.Subtitle1"
                    android:textColor="@color/textColor"
                    tools:ignore="RtlSymmetry" />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/trintaedois"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="16dp"
                    android:text="@string/_32_participantes"
                    android:textAppearance="@style/TextAppearance.Subtitle1"
                    android:textColor="@color/textColor"
                    tools:ignore="RtlSymmetry" />

            </RadioGroup>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_continuar"
                style="@style/Widget.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="24dp"
                android:enabled="false"
                android:text="@string/continuar"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>